6 The Destination Page | Fixing the alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -479,8 +479,9 @@ body * {
     padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]){
     max-width: 45ch;
+    /* outline: 1px solid greenyellow; */
 }
 
 .numbered-title {
@@ -595,14 +596,10 @@ body * {
         grid-column: 3;
     }
 
-    /* .tab-list {
+    .tab-list {
         padding: 0;
         margin: 0;
     }
-
-    .destination-info {
-        justify-self: left;
-    } */
 
     .grid-container--destination {
         justify-items: start;
@@ -618,7 +615,7 @@ body * {
     }
 
     .destination-meta {
-        --gap: 6rem;
+        --gap: min(6vw, 6rem);
         justify-content: start;
     }
 }
